# luminal

./: .gitignore  Cargo.toml
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
crates/luminal_cuda/: Cargo.toml
crates/luminal_cuda/src/: lib.rs  runtime.rs
crates/luminal_cuda/src/block/: mod.rs  ops.rs
crates/luminal_cuda/src/host/: mod.rs
crates/luminal_cuda/src/host/cublas/: mod.rs
crates/luminal_cuda/src/host/cublaslt/: cublaslt_CmCm_rewrite.egg  cublaslt_CmRm_rewrite.egg  cublaslt_RmCm_rewrite.egg  cublaslt_RmRm_rewrite.egg  mod.rs
crates/luminal_cuda/src/kernel/: cuda_graph.rs  hlir.rs  mod.rs  other_ops.rs  to_host.rs
crates/luminal_cuda/src/tests/: mod.rs  mxfp4.rs  nvfp4.rs  op_functional_tests.rs  performance_tests.rs  utilities.rs
crates/luminal_metal/src/: runtime.rs  tests.rs
crates/luminal_metal/src/kernel/: mod.rs  ops.rs
crates/luminal_nn/: Cargo.toml
examples/gpt_oss/: Cargo.toml
examples/gpt_oss/src/: hf.rs  main.rs  model.rs
src/: hlir.rs  op.rs
src/egglog_utils/: base.egg  mod.rs
src/frontend/: movement.rs
src/shape/: mod.rs  tracker.rs
