[package]
name = "luminal_cuda"
version = "0.2.0"
edition = "2024"
description = "Cuda compiler for luminal"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
luminal = { path = "../.." }
luminal_tracing = { path = "../luminal_tracing" }
cudarc = {version="0.18.2", features=["cuda-version-from-build-system", "fallback-latest"]}
as-any = "0.3.2"
itertools = "0.12.1"
fixedbitset = "0.5.7"
safetensors = "0.7.0"
tracing = "0.1.43"
tracing-perfetto-sdk-schema = "0.13.0"
prost = "0.14.1"
half = { version = "2.7.1", features = ["num-traits"] }
pretty-duration = "0.1.1"
bytemuck = "1.24.0"
memmap2 = "0.9.9"
uuid = {version="1.19.0", features=["v4"]}
lru = "0.16.2"
libc = "0.2"
colorize = "*"

[dev-dependencies]
candle-core = { version = "0.9.2-alpha.1", features = ["cuda"] }
proptest = "1.9.0"
rand = "0.9.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
num-traits = "0.2"
